<resources>
    <!-- string.xml命名规范：模块_具体作用名 -->

    <string name="app_name">Pandas</string>

    <!-- homepage 底部radiogroup-->
    <string name="home_button1">首页</string>
    <string name="home_button2">动态</string>
    <string name="home_button3">发布</string>
    <string name="home_button4">短视频</string>
    <string name="home_button5">我的</string>

    <!--room tab item-->
    <string name="string_room_tab_item0">喵星人</string>
    <string name="string_room_tab_item1">国鸟</string>
    <string name="string_room_tab_item2">灵狐</string>
    <string name="string_room_tab_item3">小熊猫</string>
    <string name="string_room_tab_item4">企鹅</string>
    <string name="string_room_tab_item5">金丝猴</string>
    <string name="string_room_tab_item6">北极熊</string>
    <string name="string_room_tab_item7">老虎</string>
    <string name="string_room_tab_item8">仓鼠</string>
    <string name="string_room_tab_item9">兔兔</string>

    <!-- behavior -->
    <string name="behavior_textview">com.example.pandas.ui.view.MyBehavior</string>


    <string name="string_loading">正在加载中…</string>
    <string name="string_nomore">没有更多数据!!!</string>
    <string name="string_load_finished">加载完成</string>
    <string name="txt_follow">关注</string>
    <string name="no_comment_string">看看下面～来发评论吧</string>
    <string name="keeping_nice_string">发一条友善的评论</string>


    <!--   love   -->
    <string name="string_love_pet">宠物</string>
    <string name="string_love_tv">影视</string>
    <string name="string_love_music">歌曲</string>
    <string name="string_love_talk">相声</string>
    <string name="string_love_other">未知</string>
    <string name="str_hot_pet">热门萌宠</string>


    <!--video info-->
    <string name="str_share">分享</string>
    <string name="str_collect">收藏</string>
    <string name="str_love">喜欢</string>
    <string name="str_like">点赞</string>
    <string name="str_dislike">不喜欢</string>
    <string name="str_setting">设置</string>

    <!--search-->
    <string name="str_cancel">取消</string>
    <string name="str_hot_search">热搜</string>
    <string name="str_search">搜索</string>
    <string name="str_history_search">搜索历史</string>
    <string name="str_hot">热</string>
    <string name="str_new">新</string>
    <string name="str_zone">动态</string>
    <string name="str_follow">关注</string>
    <string name="str_fans">粉丝中心</string>
    <string name="str_praise">获赞</string>
    <string name="str_mine_download">离线缓存</string>
    <string name="str_mine_history">历史记录</string>
    <string name="str_mine_collect">我的收藏</string>
    <string name="str_mine_later">稍后再看</string>
    <string name="str_mine_integral">我的积分</string>
    <string name="str_cache">缓存</string>
    <string name="str_history">历史记录</string>

    <!--more data-->
    <string name="str_video_music">歌曲视频</string>
    <string name="str_play_all">播放全部</string>
    <string name="str_music">音乐</string>

    <!--cache-->
    <string name="str_file_name">文件夹名：</string>
    <string name="str_desc">描述：</string>
    <string name="str_cache_name">缓存名：</string>
    <string name="str_football">天下足球</string>
    <string name="str_art">艺术雕塑</string>
    <string name="str_baby">人类宝宝</string>
    <string name="str_honglou">红楼评说</string>
    <string name="str_hl">红楼</string>
    <string name="str_beauty">影视美女</string>

    <!--self-->
    <string name="str_setting_info">账号、推出</string>
    <string name="str_mine_exp">我的积分</string>
    <string name="str_setting_more">更多服务</string>
    <string name="str_setting_more_info">免费流量卡</string>
    <string name="str_setting_other_info">新皮肤上线了</string>
    <string name="str_mine_friends">我的好友</string>
    <string name="str_setting_timing">定时关闭</string>
    <string name="str_setting_logout">退出登陆</string>
    <string name="str_setting_about">关于项目</string>
    <string name="str_manager">管理</string>

    <!--common-->
    <string name="str_news">消息</string>
    <string name="str_log">日志文件</string>
    <string name="str_no_error">暂时没有任何日志信息</string>
    <string name="str_no_data">暂无任何数据</string>
    <string name="str_no_search_data">暂无搜索数据，请重新搜索～</string>
    <string name="str_error">页面加载失败，请重试</string>
    <string name="str_eyepetizer">视频</string>
    <string name="str_hotting">热门</string>
    <string name="str_refresh">刷新一下</string>
    <string name="str_txt_mine_info">个人信息</string>
    <string name="str_head">头像</string>
    <string name="str_name">昵称</string>
    <string name="str_sex">性别</string>
    <string name="str_NO">账号ID</string>
    <string name="str_sign">个性签名</string>
    <string name="str_footer_nomore">无更多内容</string>
    <string name="str_attention_add">加入特别关注</string>
    <string name="str_attention">我的关注</string>
    <string name="str_group_divide">设置分组</string>
    <string name="str_attention_cancel">取消关注</string>
    <string name="str_followed">已关注</string>
    <string name="str_vertical">竖屏</string>
    <string name="str_coin">积分</string>
    <string name="str_mine_zone">个人中心</string>
    <string name="str_hot_comments">热门评论</string>
    <string name="str_by_time">按时间</string>
    <string name="str_by_hot">按热度</string>
    <string name="str_up_like">UP主觉得很赞</string>
    <string name="str_publish">发布</string>
    <string name="str_sending">发送中...</string>
    <string name="str_loginin">登录中</string>
    <string name="str_loginout">正在退出</string>
    <string name="str_send">发送</string>
    <string name="str_comment_list">评论详情</string>
    <string name="str_face_reco">人脸识别</string>
    <string name="str_play_after">添加至稍后再看</string>
    <string name="str_retroaction">反馈</string>
    <string name="str_recommend_video">推荐视频</string>
    <string name="str_more">更多</string>
    <string name="str_music_video">音乐视频</string>
    <string name="str_new_song">新歌</string>
    <string name="str_video">视频</string>
    <string name="str_clear_history_records">清除历史记录</string>
    <string name="str_select_all">全选</string>
    <string name="str_delete">删除</string>
    <string name="str_delte_history">清除已选中的历史记录吗？</string>
    <string name="str_sure">确定</string>
    <string name="str_create">创建</string>
    <string name="str_finish">完成</string>
    <string name="str_name_mc">名称</string>
    <string name="str_introduce">简介</string>
    <string name="str_add_introduce">可填写简介</string>
    <string name="str_open">公开</string>
    <string name="str_cover">封面</string>
    <string name="str_close_function">功能暂时关闭</string>
    <string name="str_please_waiting">请稍候…</string>
    <string name="str_delete_group">删除收藏夹</string>
    <string name="str_view_setting">界面设置</string>
    <string name="str_network">网络</string>
    <string name="str_dark_mode">深色模式</string>
    <string name="str_storage">缓存设置</string>
    <string name="str_dm_close">已关闭弹幕</string>
    <string name="str_find_more">查看更多</string>
    <string name="str_transmit">转发</string>
    <string name="str_face_add">人脸注册</string>
    <string name="str_name_input">请输入姓名</string>
    <string name="str_phone_input">请输入手机号</string>
    <string name="str_username">姓名</string>
    <string name="str_phone_no">手机号</string>
    <string name="str_hot_comment">热词</string>
    <string name="str_mine_total_integral">我的总积分</string>
    <string name="str_hint_edit_short">善语结善缘，恶言伤人心</string>
    <string name="str_reply">回复</string>
    <string name="str_save">保存</string>


    <!--selector-->
    <string name="ps_camera_roll">相机胶卷</string>
    <string name="ps_camera_roll_num">%1$s (%2$d)</string>
    <string name="ps_cancel">取消</string>
    <string name="ps_take_picture">拍摄</string>
    <string name="ps_rule">不能同时选择图片或视频</string>
    <string name="ps_message_max_num">你最多只能选择%1$s张照片</string>
    <string name="ps_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="ps_message_video_max_num">你最多只能选择%1$s个视频</string>
    <string name="ps_message_audio_max_num">你最多只能选择%1$s个音频</string>
    <string name="ps_preview">预览</string>
    <string name="ps_please">请稍候…</string>
    <string name="ps_done_front_num">%1$d/%2$d 完成</string>
    <string name="ps_completed">已完成</string>
    <string name="ps_done">完 成</string>
    <string name="ps_please_select">请选择</string>
    <string name="ps_empty_title">无视频或照片\n</string>
    <string name="ps_empty_audio_title">无音频文件\n</string>
    <string name="ps_empty">你可以使用相机拍摄照片或视频</string>
    <string name="ps_audio_empty">你可以使用系统录音录制音频</string>
    <string name="ps_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="ps_min_audio_num">音频最低选择不能少于%1$s个</string>
    <string name="ps_gif_tag">动图</string>
    <string name="ps_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="ps_camera">获取系统相机权限被拒绝</string>
    <string name="ps_audio">获取系统录音权限被拒绝</string>
    <string name="ps_video_toast">视频不可预览</string>
    <string name="ps_record_video">录视频</string>
    <string name="ps_photograph">拍照</string>
    <string name="ps_long_chart">长图</string>
    <string name="ps_warning">暂无媒体文件！</string>
    <string name="ps_prompt">提示</string>
    <string name="ps_prompt_image_content">是否保存图片至手机？</string>
    <string name="ps_prompt_video_content">是否保存视频至手机？</string>
    <string name="ps_prompt_audio_content">是否保存音频至手机？</string>
    <string name="ps_save_image_error">图片保存失败</string>
    <string name="ps_save_video_error">视频保存失败</string>
    <string name="ps_save_audio_error">音频保存失败</string>
    <string name="ps_save_success">文件保存成功至</string>
    <string name="ps_all_audio">所有音频</string>
    <string name="ps_tape">录音</string>
    <string name="ps_play_audio">播放</string>
    <string name="ps_stop_audio">停止</string>
    <string name="ps_quit_audio">退出</string>
    <string name="ps_pause_audio">暂停</string>
    <string name="ps_error">图片已损坏</string>
    <string name="ps_video_error">视频已损坏</string>
    <string name="ps_audio_error">音频已损坏</string>
    <string name="ps_confirm">确定</string>
    <string name="ps_preview_image_num">%1$d/%2$d</string>
    <string name="ps_not_crop_data">无可用裁剪数据</string>
    <string name="ps_original_image">原图 (%1$s)</string>
    <string name="ps_default_original_image">原图</string>
    <string name="ps_send">完成</string>
    <string name="ps_send_num">完成(%1$d/%2$d)</string>
    <string name="ps_preview_num">预览(%1$d)</string>
    <string name="ps_select">选择</string>
    <string name="ps_data_exception">获取相册数据异常…</string>
    <string name="ps_choose_max_seconds">最大只能选择 %1$ds 以内的视频</string>
    <string name="ps_choose_min_seconds">不能选择低于 %1$ds 内的视频</string>
    <string name="ps_choose_limit_seconds">只能选择 %1$ds 至 %2$ds内的视频</string>
    <string name="ps_go_setting">去设置</string>
    <string name="ps_know">我知道了</string>
    <string name="ps_data_null">这里空空如也…</string>
    <string name="ps_editor">编辑</string>
    <string name="ps_webp_tag">webp</string>
    <string name="ps_use_camera">正在使用相机</string>
    <string name="ps_use_sound">正在使用录音功能</string>
    <string name="ps_current_week">本周</string>
    <string name="ps_current_month">这个月</string>
    <string name="ps_select_max_size">选择文件大于%1$s</string>
    <string name="ps_select_min_size">选择文件小于%1$s</string>
    <string name="ps_select_video_max_second">选择视频大于%1$d秒</string>
    <string name="ps_select_video_min_second">选择视频小于%1$d秒</string>
    <string name="ps_select_audio_max_second">选择音频大于%1$d秒</string>
    <string name="ps_select_audio_min_second">选择音频小于%1$d秒</string>
    <string name="ps_select_no_support">不支持的选择类型</string>

</resources>
