<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_home"
            android:checked="true"
            android:icon="@drawable/selector_button_home_sky"
            android:title="@string/home_button1" />

    <item
            android:id="@+id/menu_news"
            android:icon="@drawable/selector_button_dynamic_sky"
            android:title="@string/home_button2" />

    <item
            android:id="@+id/menu_add"
            android:icon="@drawable/selector_button_face"
            android:title="@string/home_button3" />

    <item
            android:id="@+id/menu_more"
            android:icon="@drawable/selector_button_video_sky"
            android:title="@string/home_button4" />

    <item
            android:id="@+id/menu_mine"
            android:icon="@drawable/selector_button_mine_sky"
            android:title="@string/home_button5" />

</menu>