<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/white"
        app:cardElevation="0.5dp"
        app:cardCornerRadius="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_pet"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_pet"
                    style="@style/styles_img_love_classify" />

            <TextView
                    style="@style/styles_txt_love_classify"
                    android:text="@string/string_love_pet" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_tv"
                    style="@style/styles_img_love_classify" />

            <TextView
                    style="@style/styles_txt_love_classify"
                    android:text="@string/string_love_tv" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_music"
                    style="@style/styles_img_love_classify" />

            <TextView
                    style="@style/styles_txt_love_classify"
                    android:text="@string/string_love_music" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_talk"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_talk"
                    style="@style/styles_img_love_classify" />

            <TextView
                    style="@style/styles_txt_love_classify"
                    android:text="@string/string_love_talk" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llayout_other"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_other"
                    style="@style/styles_img_love_classify" />

            <TextView
                    style="@style/styles_txt_love_classify"
                    android:text="@string/string_love_other" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>