<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_creator_bg"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout_creator_top"
            android:layout_width="match_parent"
            android:background="@color/color_bg_home"
            android:layout_height="56dp"
            android:elevation="3dp">

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibn_creator_back"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="@id/clayout_creator_top"
                android:background="@null"
                android:src="@mipmap/img_topview_back" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_creator_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/ibn_creator_back"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_top"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_top"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:text="@string/str_create"
                android:textColor="@color/color_history_title" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_creator_finish"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_top"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_top"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_top"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/color_history_manager"
                android:text="@string/str_finish" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout_creator_cover"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="14dp"
            android:background="@color/color_creator_item_bg">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_cover"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_cover"
                app:layout_constraintLeft_toLeftOf="@id/clayout_creator_cover"
                android:layout_marginStart="12dp"
                android:text="@string/str_cover"
                android:textSize="14sp"
                android:textColor="@color/color_talk_name" />

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_cover"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_cover"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_cover"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/img_left_arrow_right" />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_cover"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_cover"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_cover"
                android:layout_marginEnd="33dp"
                android:text="@string/str_close_function"
                android:textSize="11sp"
                android:textColor="@color/color_craetor_text"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout_creator_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@color/color_creator_item_bg">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_name"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_name"
                app:layout_constraintLeft_toLeftOf="@id/clayout_creator_name"
                android:layout_marginStart="12dp"
                android:text="@string/str_name_mc"
                android:textSize="14sp"
                android:drawableStart="@mipmap/img_need_input"
                android:textColor="@color/color_talk_name" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_create_name"
                android:layout_width="248dp"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_name"
                android:layout_marginEnd="12dp"
                android:hint="@string/str_name_mc"
                android:textColorHint="@color/color_craetor_text"
                android:textCursorDrawable="@drawable/shape_edit_comment"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_txt_video_info_name"
                android:background="@null"
                android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout_creator_introduce"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="14dp"
            android:background="@color/color_creator_item_bg">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_introduce"
                app:layout_constraintLeft_toLeftOf="@id/clayout_creator_introduce"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/str_introduce"
                android:textSize="14sp"
                android:textColor="@color/color_talk_name" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_create_introduce"
                android:layout_width="248dp"
                android:layout_height="101dp"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_introduce"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_introduce"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:hint="@string/str_add_introduce"
                android:textColorHint="@color/color_craetor_text"
                android:textCursorDrawable="@drawable/shape_edit_comment"
                android:ellipsize="end"
                android:lineSpacingExtra="5dp"
                android:gravity="top"
                android:textColor="@color/color_txt_video_info_name"
                android:background="@null"
                android:textSize="14sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clayout_creator_setting"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@color/color_creator_item_bg">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_setting"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_setting"
                app:layout_constraintLeft_toLeftOf="@id/clayout_creator_setting"
                android:layout_marginStart="12dp"
                android:text="@string/str_open"
                android:textSize="14sp"
                android:textColor="@color/color_talk_name" />

        <!--Switch使用 android:theme="@style/MySwitch" -->
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_group_creator"
                android:layout_width="46dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="@id/clayout_creator_setting"
                app:layout_constraintBottom_toBottomOf="@id/clayout_creator_setting"
                app:layout_constraintRight_toRightOf="@id/clayout_creator_setting"
                android:layout_marginEnd="12dp"
                android:checked="true"
                app:theme="@style/MySwitch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>